--- a/package.json
+++ b/package.json
@@ -5,13 +5,21 @@
   "scripts": {
     "dev": "next dev",
     "build": "prisma generate && next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "latest",
-    "openai": "latest",
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest"
+    "next": "14.1.0",
+    "react": "^18",
+    "react-dom": "^18",
+    "@prisma/client": "^5.10.2",
+    "openai": "^4.28.0"
+  },
+  "devDependencies": {
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "prisma": "^5.10.2"
   }
 }
