--- a/package.json
+++ b/package.json
@@ -1,26 +1,14 @@
 {
   "name": "layth-amer-farm-website",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "Your project description",
+  "main": "index.js",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate"
+    "start": "next start"
   },
   "dependencies": {
-    "next": "14.1.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "@prisma/client": "^5.10.2",
-    "openai": "^4.28.0"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "prisma": "^5.10.2"
+    "react": "^18.0.0"
   }
 }
