--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "layth-amer-farm-website",
   "version": "1.0.0",
-  "description": "Your project description",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "react": "^18.0.0"
+    "next": "14.1.0",
+    "react": "^18",
+    "react-dom": "^18"
   }
 }
