--- a/package.json
+++ b/package.json
@@ -1,1 +1,10 @@
-npm warn deprecated next@14.1.0: This version has a security vulnerability. Please upgrade to a patched version. See https://nextjs.org/blog/security-update-2025-12-11 for more details.
+{
+  "name": "layth-farm-website",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "serve ."
+  },
+  "dependencies": {
+    "serve": "^14.0.0"
+  }
+}
