--- a/package.json
+++ b/package.json
@@ -1,63 +1,12 @@
-<!DOCTYPE html>
-<html lang="ar" dir="rtl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>إدارة مزرعة ليث عامر</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        body { background-color: #f7fee7; font-family: sans-serif; }
-    </style>
-</head>
-<body>
-    <header class="bg-green-800 text-white p-8 shadow-2xl text-center">
-        <h1 class="text-4xl font-bold italic">مزرعة ليث عامر 🌴</h1>
-        <p class="text-green-200 mt-2">نظام الإدارة الذكي والإشراف الجغرافي</p>
-    </header>
-
-    <main class="max-w-5xl mx-auto p-6">
-        <div class="bg-white rounded-3xl shadow-lg p-6 mb-8 border-t-4 border-green-600">
-            <h2 class="text-2xl font-bold text-green-800 mb-4 flex items-center gap-2">📍 موقع المزرعة</h2>
-            <div class="rounded-2xl overflow-hidden border-2 border-green-100 shadow-inner">
-                <iframe id="farmMap" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13264.846543160454!2d43.318881!3d33.421111!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sar!2siq!4v1700000000000" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            </div>
-            <div class="mt-4 flex gap-2">
-                <input type="text" id="mapUrl" placeholder="تحديث رابط الموقع (للمدير فقط)..." class="flex-1 border p-3 rounded-xl focus:ring-2 ring-green-400 outline-none">
-                <button onclick="updateMap()" class="bg-green-700 text-white px-8 py-3 rounded-xl hover:bg-green-900 transition">تحديث</button>
-            </div>
-        </div>
-    </main>
-
-    <div class="fixed bottom-6 left-6 w-80 bg-white rounded-2xl shadow-2xl border border-green-200 overflow-hidden">
-        <div class="bg-green-800 p-4 text-white font-bold flex justify-between">
-            <span>🤖 مساعد ليث الذكي</span>
-        </div>
-        <div id="chatBox" class="h-48 p-4 overflow-y-auto text-sm space-y-2 bg-gray-50">
-            <div class="bg-white p-2 rounded shadow-sm text-gray-700">مرحباً بك ليث، كيف يمكنني مساعدتك في المزرعة اليوم؟</div>
-        </div>
-        <div class="p-2 border-t flex">
-            <input type="text" id="chatInput" placeholder="اسأل البوت..." class="flex-1 p-2 outline-none text-sm">
-            <button onclick="sendMsg()" class="text-green-700 font-bold px-2">إرسال</button>
-        </div>
-    </div>
-
-    <script>
-        function updateMap() {
-            const link = document.getElementById('mapUrl').value;
-            if(link) {
-                document.getElementById('farmMap').src = link;
-                alert('تم تحديث الموقع بنجاح ✅');
-            }
-        }
-        function sendMsg() {
-            const input = document.getElementById('chatInput');
-            const chatBox = document.getElementById('chatBox');
-            if(input.value) {
-                chatBox.innerHTML += `<div class="bg-green-100 p-2 rounded text-right">${input.value}</div>`;
-                input.value = '';
-                chatBox.scrollTop = chatBox.scrollHeight;
-            }
-        }
-    </script>
-</body>
-</html>
+{
+  "name": "layth-amer-farm-website",
+  "version": "1.0.0",
+  "main": "index.html",
+  "scripts": {
+    "start": "serve .",
+    "build": "echo 'No build needed'"
+  },
+  "dependencies": {
+    "serve": "^14.2.1"
+  }
+}
