--- a/package.json
+++ b/package.json
@@ -1,12 +1,7 @@
 {
-  "name": "layth-amer-farm-website",
+  "name": "layth-farm",
   "version": "1.0.0",
-  "main": "index.html",
   "scripts": {
-    "start": "serve .",
-    "build": "echo 'No build needed'"
-  },
-  "dependencies": {
-    "serve": "^14.2.1"
+    "start": "serve ."
   }
 }
